--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-paho-mqtt
-tensorflow
-keras
+paho-mqtt==1.6.1
+tensorflow==2.14.0
+psutil==5.9.6
 ipfshttpclient==0.8.0a2
-joblib
-psutil
+joblib==1.3.2
+keras==2.14.0
