--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,6 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Run tests
-      run: pytest
-
+      run: |
+        # Recursively find and run tests from subfolders
+        find . -type f -name "test_*.py" -exec pytest {} \;
