--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,10 @@ jobs:
       with:
         python-version: 3.x
 
-    - name: Install dependencies
-      run: pip install -r requirements.txt
+#     - name: Install dependencies
+#       run: pip install -r requirements.txt
 
-    - name: Run tests
-      run: |
-        # Recursively find and run tests from subfolders
-        find . -type f -name "test_*.py" -exec pytest {} \;
+#     - name: Run tests
+#       run: |
+#         # Recursively find and run tests from subfolders
+#         find . -type f -name "test_*.py" -exec pytest {} \;
