--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Run tests
-      run: python -m pytest .\test\Model\deepLearningModel\test_DL_ANN_classification.py
+      run: python -m pytest test\Model\deepLearningModel\test_DL_ANN_classification.py
 
