--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Install dependencies
       run: pip install -r requirements.txt
 
-    - name: Run tests
-      run: python -m pytest test/Model/deepLearningModel/test_DL_ANN_classification.py
+    # - name: Run tests
+    #   run: python -m pytest test/Model/deepLearningModel/test_DL_ANN_classification.py
 
